[gd_scene load_steps=11 format=2]

[ext_resource path="res://Materials/Scene_Transition_Shader.tres" type="Shader" id=1]
[ext_resource path="res://Assets/Menu/transition_in.png" type="Texture" id=2]
[ext_resource path="res://Scripts/SceneTransition.gd" type="Script" id=3]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Transition4:material:shader_param/Mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.1 ]
}

[sub_resource type="Animation" id=1]
resource_name = "transition_in_01_anim"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:material:shader_param/Mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ -0.1, -0.1, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition2:material:shader_param/Mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ -0.1, -0.1, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Transition3:material:shader_param/Mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ -0.1, -0.1, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Transition4:material:shader_param/Mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 2, 0.5, 1 ),
"update": 0,
"values": [ -0.1, -0.1, 1.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Transition:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Transition2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Transition3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Transition4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "transition_out_anim"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Transition4:material:shader_param/Mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 0.3, 0.3 ),
"update": 0,
"values": [ 1.0, 1.0, -0.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition3:material:shader_param/Mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 0.3, 0.3 ),
"update": 0,
"values": [ 1.0, 1.0, -0.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Transition2:material:shader_param/Mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 0.3, 0.3 ),
"update": 0,
"values": [ 1.0, 1.0, -0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Transition:material:shader_param/Mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 0.3, 0.3 ),
"update": 0,
"values": [ 1.0, 1.0, -0.1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Transition:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Transition2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Transition3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Transition4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/ColorUniform = Color( 0.952941, 0.941176, 0.909804, 1 )
shader_param/Mask = -0.1
shader_param/mask_texture = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/ColorUniform = Color( 0.94902, 0.682353, 0.129412, 1 )
shader_param/Mask = -0.1
shader_param/mask_texture = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 1 )
shader_param/ColorUniform = Color( 0.898039, 0.215686, 0.215686, 1 )
shader_param/Mask = -0.1
shader_param/mask_texture = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 1 )
shader_param/ColorUniform = Color( 0, 0, 0, 1 )
shader_param/Mask = -0.1
shader_param/mask_texture = ExtResource( 2 )

[node name="Transition" type="Node"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/RESET = SubResource( 7 )
anims/transition_in_01_anim = SubResource( 1 )
anims/transition_out_anim = SubResource( 6 )

[node name="Transition" type="ColorRect" parent="."]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Transition2" type="ColorRect" parent="."]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition3" type="ColorRect" parent="."]
visible = false
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Transition4" type="ColorRect" parent="."]
visible = false
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
